# Sample-API

./: .gitignore
final_project/: dev_testing.sh  links.txt  load.js  prod_testing.sh
final_project/.k8s/bases/: deployment-lab4.yaml  deployment-project.yaml  kustomization.yaml  service-project.yaml
final_project/.k8s/overlays/dev/: patch-deployment-project.yaml
final_project/.k8s/overlays/prod/: kustomization.yaml  patch-deployment-project.yaml  patch-deployment-project_copy.yaml  virtual-service.yaml
final_project/mlapi/: Dockerfile
final_project/mlapi/src/: main.py
final_project/mlapi/tests/: test_mlapi.py
lab1/: README.md
lab1/lab1/: Dockerfile  pyproject.toml
lab1/lab1/src/: main.py
lab_2/: README.md  run.sh
lab_2/lab_2/: Dockerfile  model_pipeline.pkl  pyproject.toml
lab_2/lab_2/src/: main.py
lab_2/lab_2/tests/: test_sample.py
lab_2/trainer/: model.py  train.py
lab_3/: README.md  docker-compose.yaml  run.sh
lab_3/lab_3/: Dockerfile  pyproject.toml
lab_3/lab_3/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  log.txt  namespace.yaml  service-prediction.yaml  service-redis.yaml
lab_3/lab_3/src/: main.py
lab_3/tests/: test_sample.py
lab_4/: README.md  dev_testing.sh  prod_testing.sh  run.sh
lab_4/.k8s/bases/: deployment-lab4.yaml  kustomization.yaml  service-lab4.yaml
lab_4/.k8s/overlays/dev/: kustomization.yaml  (+1 more)
lab_4/lab_4/: Dockerfile
lab_4/lab_4/infra/: deployment-pythonapi.yaml  deployment-redis.yaml
lab_4/lab_4/src/: main.py
lab_4/tests/: test_sample.py
lab_5/: Findings.md  load.js
trainer/: train.py
(+3 files in other folders)
