[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Marcus Manos <marcusmanos@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.83.0"
uvicorn = "^0.18.3"
pytest = "^7.1.3"
requests = "^2.28.1"
pytest-asyncio = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
