[tool.poetry]
name = "lab2"
version = "0.2.0"
description = ""
authors = ["James Winegar <jameswine@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
requests = "^2.28.1"
joblib = "^1.1.0"
scipy = "^1.9"
scikit-learn = "1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"